group images by prompt

--- a/.env.dummy
+++ b/.env.dummy
@@ -5,6 +5,6 @@ COOLDOWN_MINUTES = 120
 SLEEP_INTERVAL_SECONDS = 60
 IMG_DIR = images
 DONE_DIR = done
-TIME_FILE = tmp/timer
+TIMER_FILENAME = tmp/timer
 LAST_FILENAME = tmp/last_filename
 META_TAG=dream
