removed spaces from prompt in db

--- a/.env.dummy
+++ b/.env.dummy
@@ -1,10 +1,11 @@
-TOKEN=  # Токен телеграм бота
+TOKEN =  # Токен телеграм бота
 USER_WHITELIST = 124588016,  # ВАЖНО! Не ставить пробел после занятой, пример: user1,user2,user3
-CHANNEL_NAME =   # ВАЖНО! Начинается с символа @
-COOLDOWN_MINUTES = 120
-SLEEP_INTERVAL_SECONDS = 60
+CHANNEL_NAME =  # ВАЖНО! Начинается с символа @
+COOLDOWN_MINUTES = 60
+SLEEP_INTERVAL_SECONDS = 3
 IMG_DIR = images
 DONE_DIR = done
 TIMER_FILENAME = tmp/timer
 LAST_FILENAME = tmp/last_filename
-META_TAG=dream
+DB_FILENAME = tmp/image_metadata.db
+META_TAG = Dream
